add serialization for numpy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fog_x"
-version = "0.1.0.beta.3"
+version = "0.1.0.beta.4"
 dependencies = [
     "pandas", 
     "numpy",
@@ -13,6 +13,7 @@ dependencies = [
     "pyarrow",
     "opencv-python",
     "sqlalchemy==1.4.51",
+    "smart_open",
 ]
 description = "An Efficient and Scalable Data Collection and Management Framework For Robotics Learning"
 readme = {file = "README.md", content-type = "text/markdown"}
@@ -22,7 +23,7 @@ keywords = ["robotics", "data", "management", "collection", "framework", "learni
 [project.optional-dependencies]
 hf = ["datasets"]
 rtx = ["tensorflow", "tensorflow_datasets", "envlogger"]
-aws = ["boto3", "smart_open"]
+aws = ["boto3"]
 torch = ["torch"]
 all = ["datasets", "tensorflow", "tensorflow_datasets", "envlogger", "boto3", "smart_open", "torch", "torchvision"]
 
